# meta-open-env

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  SUBMISSION_SUMMARY.md  __init__.py  app.py  client.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  validate-submission.sh
server/: __init__.py  app.py
support-ticket-env/: .env.example  .gitignore  Dockerfile  LICENSE  README.md  SUBMISSION_CHECKLIST.md  SUBMISSION_REPORT.md  __init__.py  app.py  client.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  test_env.py  test_graders.py  test_integration.py  test_server.py  validate_submission.py  validate_yaml.py  verify_submission.py
support-ticket-env/server/: __init__.py  app.py
